# opensimplex-problem-rust-noise

./: Cargo.toml
src/: colormap.rs  main.rs
