[package]
name = "noise_opensimplex_problem"
version = "0.1.0"
authors = ["V. Jackson <vjackson725@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
noise = "*"
image = "*"
glam = "*"
mp4 = "*"